[package]
name = "yew-demo"
version = "0.1.0"
authors = ["Zoe <hi@zoe.im>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.13.0", features = ["std_web"] }

[profile.release]
panic = 'abort'
codegen-units = 1
lto = true
opt-level = 'z'
